# projectile-motion-optimizer

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.py
data/: sample_targets.csv
examples/: compare_drag_models.py  find_target_angle.py  run_basic_simulation.py
src/projectile_optimizer/: __init__.py  app.py  constants.py  metrics.py  models.py  optimizer.py  physics.py  simulator.py
tests/: test_metrics.py  test_optimizer.py  test_physics.py  test_simulator.py
