[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "projectile-motion-optimizer"
version = "0.1.0"
description = "Physics-based projectile motion optimizer with RK4, drag models, and TDD tests."
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "matplotlib>=3.7",
  "pandas>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "streamlit>=1.30"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]